--- a/styles.css
+++ b/styles.css
@@ -54,15 +54,18 @@ body {
 
 #side-wolves {
     width: 230px;
+    margin-left: 1rem;
 }
 #side-wolves2 {
     width: 200px;
+    margin-left: 2rem;
 }
 /* Create three equal columns that floats next to each other */
 .column {
     float: left;
     width: 33.33%;
     padding: 15px;
+    text-align: center;
 }
 
 /* Clear floats after the columns */
