--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
 
 body {
     margin: 0;
+    font-family: 'Caveat';
 }
 #clickme {
     width: 80px;
@@ -16,34 +17,36 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #f1f1f1;
+    background-color: white;
     padding: 20px;
     text-align: center;
 }
 .header p {
     color: black;
     text-align: center;
-    font-family: 'Caveat';
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 .header img {
     width: 200px;
+    border: 4px solid cornflowerblue;
 }
 
 /* Style the top navigation bar */
 .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color:cornflowerblue;
 }
 
 /* Style the topnav links */
 .topnav a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 20px 16px;
     text-decoration: none;
+    margin: 0 270px;
+    font-size: 1.5rem;
 }
 
 /* Change color on hover */
@@ -55,10 +58,11 @@ body {
 #side-wolves {
     width: 230px;
     margin-left: 1rem;
+    border: 4px solid cornflowerblue;
 }
 #side-wolves2 {
     width: 200px;
-    margin-left: 2rem;
+    margin-right: 1rem;
 }
 /* Create three equal columns that floats next to each other */
 .column {
@@ -73,6 +77,12 @@ body {
     content: "";
     display: table;
     clear: both;
+}
+.row h2 {
+    font-size: 2rem;
+}
+.row p {
+    font-size: 2rem;
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
